# ChangeLog for sys-apps/microcode-ctl
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/microcode-ctl/ChangeLog,v 1.18 2006/09/26 15:28:22 blubb Exp $

  26 Sep 2006; Simon Stelling <blubb@gentoo.org> microcode-ctl-1.13.ebuild:
  stable on amd64

  11 Sep 2006; Tony Vroon <chainsaw@gentoo.org> microcode-ctl-1.13.ebuild:
  Stable x86 keyword, bug #145926.

*microcode-ctl-1.14 (02 Sep 2006)

  02 Sep 2006; Mike Frysinger <vapier@gentoo.org>
  +microcode-ctl-1.14.ebuild:
  Version bump #145857 by Nuno Lopes.

*microcode-ctl-1.13 (22 Jan 2006)

  22 Jan 2006; Mike Frysinger <vapier@gentoo.org>
  +microcode-ctl-1.13.ebuild:
  Version bump #119821 by Alexander Skwar.

  26 Dec 2005; Mike Frysinger <vapier@gentoo.org>
  files/microcode_ctl.conf.d, files/microcode_ctl.rc:
  Add an option to unload the microcode kernel module after we are done using
  it #116790 by ilGino.

*microcode-ctl-1.12 (15 Sep 2005)

  15 Sep 2005; Mike Frysinger <vapier@gentoo.org>
  +microcode-ctl-1.12.ebuild:
  Version bump.

  09 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  microcode-ctl-1.11.ebuild:
  etc/conf.d was not always being created

*microcode-ctl-1.11 (14 Nov 2004)

  14 Nov 2004; Mike Frysinger <vapier@gentoo.org> files/microcode_ctl.rc,
  +microcode-ctl-1.11.ebuild:
  Version bump and init.d update #70781 by Christian Skarby.

*microcode-ctl-1.10 (30 Oct 2004)

  30 Oct 2004; Mike Frysinger <vapier@gentoo.org>
  +microcode-ctl-1.10.ebuild:
  Version bump #69360 by Christian Skarby.

*microcode-ctl-1.09 (16 Oct 2004)

  16 Oct 2004; Mike Frysinger <vapier@gentoo.org>
  +microcode-ctl-1.09.ebuild:
  Version bump #67786 by Christian Skarby.

*microcode-ctl-1.08 (31 Aug 2004)

  31 Aug 2004; Mike Frysinger <vapier@gentoo.org> +files/microcode_ctl.conf.d,
  +files/microcode_ctl.rc, +microcode-ctl-1.08.ebuild:
  Version bump and init.d scripts #60396 by Michael Cramer.

*microcode-ctl-1.07-r1 (05 Jun 2004)
