@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/microcode-ctl
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/microcode-ctl/ChangeLog,v 1.18 2006/09/26 15:28:22 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/microcode-ctl/ChangeLog,v 1.19 2006/11/10 00:08:28 vapier Exp $
+
+*microcode-ctl-1.15 (10 Nov 2006)
+
+  10 Nov 2006; Mike Frysinger <vapier@gentoo.org>
+  +microcode-ctl-1.15.ebuild:
+  Version bump #154565 by Nuno Lopes.
 
   26 Sep 2006; Simon Stelling <blubb@gentoo.org> microcode-ctl-1.13.ebuild:
   stable on amd64
